# lapo-presenter-notes

./: .gitignore  LICENSE  README.md  conf.py  mkdocs.yml  pip-dependencies.txt  pyproject.toml  requirements.txt
docs/: _object-template.md  about.md  greek.md  index.md  notes.md  object-availability.md  object_availability.md  reference.md  telescope.md  whats-up.md
docs/css/: nightvision.css
docs/img/: image-credits.md  whats-up.html
docs/init/: initialize_json.py
docs/js/: utils.js  whatsup.js
docs/solar system/: mars.md  mercury.md  moon.md  neptune.md  saturn.md  sun.md  venus.md
docs/solar-system/: clouds.md  jupiter.md  mars.md  mercury.md  moon-craters.md  moon-mare.md  moon-mountains.md  moon-other-features.md  moon.md  neptune.md  old-moon.md  saturn.md  sun.md  uranus.md  venus.md
docs/telescope/: telescope-cloudy.md  telescope-formula.md  telescope-operation.md  telescope.md
presenterNotes/: mkdocs.yml
presenterNotes/docs/: index.md
resources/: startExplainerNotes-Chrome.bat  startExplainerNotes-IE.bat
todo/Astronomy Fun Facts/: 95 Her Slides.odp  95 Hercules (D Variable).docx  Albireo.docx  Alpha 1 Cap (D Variable).docx  Asteroid Vesta.docx  Carbon Star Basics.docx  Castor.docx  Comet Encke.docx  Double Cluster in Perseus.docx  Epsilon Lyrae.docx  Gamma Arietis.docx  Gamma Delphini.docx  Hind's Crimson Star.docx  LW Cygni.docx  M103 Open Cluster.docx  M11 Wild Duck Cluster.docx  M13 Hercules Cluster.docx  M15 Great Pegasus Cluster slides.odp  M15 Great Pegasus Cluster.docx  M2 Globular Cluster.docx  M2 Globular Cluster.odt  (+35 more)
(+186 files in other folders)
