[tool.poetry]
name = "lapo-presenter-notes"
version = "0.1.0"
description = ""
authors = ["James Classen <jclassen@gmail.com>"]
readme = "README.md"
packages = [{include = "lapo_presenter_notes"}]

[tool.poetry.dependencies]
python = "~3.9.0"
mkdocs = "^1.4.2"
mkdocs-bootstrap = "^1.1"
mkdocs-bootswatch = "^1.1"
pytz = ">2022.7.1"
skyfield = "^1.46"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
